--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<html><head><style></style></head><body><a href="repository.thecrew-0.3.4.zip">repository.thecrew-0.3.4.zip</a>
-</body></html>
+<!DOCTYPE html>
+<a href="filcc.zip">repository.thecrew-0.3.4.zip</a>
