--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="filcc.zip">plugin.video.filmancc-2.5.zip</a>
+<a href="plugin.video.filmancc-2.5.zip">plugin.video.filmancc-2.5.zip</a>
