--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <a href="plugin.video.filmancc-2.5.zip">plugin.video.filmancc-2.5.zip</a>
 <a href="plugin.video.theoath-4.11.03.zip">plugin.video.theoath-4.11.03.zip</a>
 <a href="plugin.video.filmancc-2.9.zip">plugin.video.filmancc-2.9.zip</a>
+<a href="plugin.video.fanfilm-2022.10.06.0.zip">plugin.video.fanfilm-2022.10.06.0.zip</a>
+
